// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockStack > animations 1`] = `
{
  "head.fadeOut": [
    "bubbles.head.1",
    "bubbles.head.2",
    "bubbles.head.4",
    "bubbles.head.3",
    "bubbles.head.4",
    "bubbles.head.6",
    "bubbles.head.5",
    "bubbles.head.6",
    "bubbles.head.5",
  ],
  "head.idle.awayRight": [
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.walking.awayRight.3",
    "head.blinking.awayRight",
    "head.walking.awayRight.3",
    "head.blinking.awayRight",
  ],
  "head.idle.right": [
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.walking.right.3",
    "head.blinking.right",
    "head.walking.right.3",
    "head.blinking.right",
  ],
  "head.idle.towards": [
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.walking.towards.3",
    "head.blinking.towards",
    "head.walking.towards.3",
    "head.blinking.towards",
  ],
  "head.idle.towardsLeft": [
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.3",
    "head.blinking.towardsLeft",
    "head.walking.towardsLeft.3",
    "head.blinking.towardsLeft",
  ],
  "head.idle.towardsRight": [
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.blinking.towardsRight",
    "head.walking.towardsRight.2",
    "head.blinking.towardsRight",
  ],
  "head.walking.away": [
    "head.walking.away.1",
    "head.walking.away.2",
    "head.walking.away.3",
    "head.walking.away.2",
  ],
  "head.walking.awayLeft": [
    "head.walking.awayLeft.1",
    "head.walking.awayLeft.2",
    "head.walking.awayLeft.3",
    "head.walking.awayLeft.2",
  ],
  "head.walking.awayRight": [
    "head.walking.awayRight.1",
    "head.walking.awayRight.2",
    "head.walking.awayRight.3",
    "head.walking.awayRight.2",
  ],
  "head.walking.left": [
    "head.walking.left.1",
    "head.walking.left.2",
    "head.walking.left.3",
    "head.walking.left.2",
  ],
  "head.walking.right": [
    "head.walking.right.1",
    "head.walking.right.2",
    "head.walking.right.3",
    "head.walking.right.2",
  ],
  "head.walking.towards": [
    "head.walking.towards.1",
    "head.walking.towards.2",
    "head.walking.towards.3",
    "head.walking.towards.2",
  ],
  "head.walking.towardsLeft": [
    "head.walking.towardsLeft.1",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.2",
  ],
  "head.walking.towardsRight": [
    "head.walking.towardsRight.1",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.3",
    "head.walking.towardsRight.2",
  ],
  "heels.fadeOut": [
    "bubbles.heels.1",
    "bubbles.heels.2",
    "bubbles.heels.4",
    "bubbles.heels.3",
    "bubbles.heels.4",
    "bubbles.heels.6",
    "bubbles.heels.5",
    "bubbles.heels.6",
    "bubbles.heels.5",
  ],
  "heels.idle.awayRight": [
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
  ],
  "heels.idle.right": [
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.standing.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
  ],
  "heels.idle.towards": [
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.standing.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
  ],
  "heels.idle.towardsLeft": [
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
  ],
  "heels.idle.towardsRight": [
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
  ],
  "heels.mixedDirections": [
    "heels.walking.towardsRight.2",
    "heels.walking.towards.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.left.2",
    "heels.walking.awayLeft.2",
    "heels.walking.away.2",
    "heels.walking.awayRight.2",
    "heels.walking.right.2",
  ],
  "heels.screenDirections": [
    "heels.walking.towardsRight.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.awayLeft.2",
    "heels.walking.awayRight.2",
  ],
  "heels.walking.away": [
    "heels.walking.away.1",
    "heels.walking.away.2",
    "heels.walking.away.3",
    "heels.walking.away.2",
  ],
  "heels.walking.awayLeft": [
    "heels.walking.awayLeft.1",
    "heels.walking.awayLeft.2",
    "heels.walking.awayLeft.3",
    "heels.walking.awayLeft.2",
  ],
  "heels.walking.awayRight": [
    "heels.walking.awayRight.1",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.3",
    "heels.walking.awayRight.2",
  ],
  "heels.walking.left": [
    "heels.walking.left.1",
    "heels.walking.left.2",
    "heels.walking.left.3",
    "heels.walking.left.2",
  ],
  "heels.walking.right": [
    "heels.walking.right.1",
    "heels.walking.right.2",
    "heels.walking.right.3",
    "heels.walking.right.2",
  ],
  "heels.walking.towards": [
    "heels.walking.towards.1",
    "heels.walking.towards.2",
    "heels.walking.towards.3",
    "heels.walking.towards.2",
  ],
  "heels.walking.towardsLeft": [
    "heels.walking.towardsLeft.1",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.3",
    "heels.walking.towardsLeft.2",
  ],
  "heels.walking.towardsRight": [
    "heels.walking.towardsRight.1",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.3",
    "heels.walking.towardsRight.2",
  ],
  "heels.worldDirections": [
    "heels.walking.towards.2",
    "heels.walking.left.2",
    "heels.walking.away.2",
    "heels.walking.right.2",
  ],
  "shine.head": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.headInSymbio": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.heels": [
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
  ],
  "shine.heelsInSymbio": [
    "blank",
    "blank",
    "blank",
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
    "blank",
    "blank",
    "blank",
  ],
}
`;

exports[`BlockStack > frame names 1`] = `
[
  "blank",
  "bubbles.head.1",
  "bubbles.head.2",
  "bubbles.head.3",
  "bubbles.head.4",
  "bubbles.head.5",
  "bubbles.head.6",
  "bubbles.heels.1",
  "bubbles.heels.2",
  "bubbles.heels.3",
  "bubbles.heels.4",
  "bubbles.heels.5",
  "bubbles.heels.6",
  "head.blinking.awayRight",
  "head.blinking.right",
  "head.blinking.towards",
  "head.blinking.towardsLeft",
  "head.blinking.towardsRight",
  "head.falling.away",
  "head.falling.awayLeft",
  "head.falling.awayRight",
  "head.falling.left",
  "head.falling.right",
  "head.falling.towards",
  "head.falling.towardsLeft",
  "head.falling.towardsRight",
  "head.walking.away.1",
  "head.walking.away.2",
  "head.walking.away.3",
  "head.walking.awayLeft.1",
  "head.walking.awayLeft.2",
  "head.walking.awayLeft.3",
  "head.walking.awayRight.1",
  "head.walking.awayRight.2",
  "head.walking.awayRight.3",
  "head.walking.left.1",
  "head.walking.left.2",
  "head.walking.left.3",
  "head.walking.right.1",
  "head.walking.right.2",
  "head.walking.right.3",
  "head.walking.towards.1",
  "head.walking.towards.2",
  "head.walking.towards.3",
  "head.walking.towardsLeft.1",
  "head.walking.towardsLeft.2",
  "head.walking.towardsLeft.3",
  "head.walking.towardsRight.1",
  "head.walking.towardsRight.2",
  "head.walking.towardsRight.3",
  "heels.blinking.awayRight",
  "heels.blinking.right",
  "heels.blinking.towards",
  "heels.blinking.towardsLeft",
  "heels.blinking.towardsRight",
  "heels.falling.away",
  "heels.falling.awayLeft",
  "heels.falling.awayRight",
  "heels.falling.left",
  "heels.falling.right",
  "heels.falling.towards",
  "heels.falling.towardsLeft",
  "heels.falling.towardsRight",
  "heels.standing.right",
  "heels.standing.towards",
  "heels.walking.away.1",
  "heels.walking.away.2",
  "heels.walking.away.3",
  "heels.walking.awayLeft.1",
  "heels.walking.awayLeft.2",
  "heels.walking.awayLeft.3",
  "heels.walking.awayRight.1",
  "heels.walking.awayRight.2",
  "heels.walking.awayRight.3",
  "heels.walking.left.1",
  "heels.walking.left.2",
  "heels.walking.left.3",
  "heels.walking.right.1",
  "heels.walking.right.2",
  "heels.walking.right.3",
  "heels.walking.towards.1",
  "heels.walking.towards.2",
  "heels.walking.towards.3",
  "heels.walking.towardsLeft.1",
  "heels.walking.towardsLeft.2",
  "heels.walking.towardsLeft.3",
  "heels.walking.towardsRight.1",
  "heels.walking.towardsRight.2",
  "heels.walking.towardsRight.3",
  "shadow.playable",
  "shadowMask.head.away",
  "shadowMask.head.awayLeft",
  "shadowMask.head.awayRight",
  "shadowMask.head.falling.away",
  "shadowMask.head.falling.awayRight",
  "shadowMask.head.falling.right",
  "shadowMask.head.falling.towardsRight",
  "shadowMask.head.right",
  "shadowMask.head.towardsRight",
  "shadowMask.heels.away",
  "shadowMask.heels.awayLeft",
  "shadowMask.heels.awayRight",
  "shadowMask.heels.right",
  "shadowMask.heels.towardsRight",
  "shine.head.1",
  "shine.head.2",
  "shine.head.3",
  "shine.head.4",
  "shine.head.5",
  "shine.head.6",
  "shine.heels.1",
  "shine.heels.2",
  "shine.heels.3",
  "shine.heels.4",
  "shine.heels.5",
  "shine.heels.6",
]
`;

exports[`Toppy > animations 1`] = `
{
  "head.fadeOut": [
    "bubbles.head.1",
    "bubbles.head.2",
    "bubbles.head.4",
    "bubbles.head.3",
    "bubbles.head.4",
    "bubbles.head.6",
    "bubbles.head.5",
    "bubbles.head.6",
    "bubbles.head.5",
  ],
  "head.idle.awayRight": [
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.walking.awayRight.2",
    "head.blinking.awayRight",
    "head.walking.awayRight.2",
    "head.blinking.awayRight",
  ],
  "head.idle.right": [
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.looking1.right",
    "head.blinking.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.looking2.right",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.walking.right.2",
    "head.blinking.right",
    "head.walking.right.2",
    "head.blinking.right",
  ],
  "head.idle.towards": [
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.looking1.towards",
    "head.blinking.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.looking2.towards",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.walking.towards.2",
    "head.blinking.towards",
    "head.walking.towards.2",
    "head.blinking.towards",
  ],
  "head.idle.towardsLeft": [
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.2",
    "head.blinking.towardsLeft",
    "head.walking.towardsLeft.2",
    "head.blinking.towardsLeft",
  ],
  "head.idle.towardsRight": [
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.looking1.towardsRight",
    "head.blinking.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.looking2.towardsRight",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.2",
    "head.blinking.towardsRight",
    "head.walking.towardsRight.2",
    "head.blinking.towardsRight",
  ],
  "head.walking.away": [
    "head.walking.away.1",
    "head.walking.away.2",
    "head.walking.away.3",
    "head.walking.away.2",
  ],
  "head.walking.awayLeft": [
    "head.walking.awayLeft.1",
    "head.walking.awayLeft.2",
    "head.walking.awayLeft.3",
    "head.walking.awayLeft.2",
  ],
  "head.walking.awayRight": [
    "head.walking.awayRight.1",
    "head.walking.awayRight.2",
    "head.walking.awayRight.3",
    "head.walking.awayRight.2",
  ],
  "head.walking.left": [
    "head.walking.left.1",
    "head.walking.left.2",
    "head.walking.left.3",
    "head.walking.left.2",
  ],
  "head.walking.right": [
    "head.walking.right.1",
    "head.walking.right.2",
    "head.walking.right.3",
    "head.walking.right.2",
  ],
  "head.walking.towards": [
    "head.walking.towards.1",
    "head.walking.towards.2",
    "head.walking.towards.3",
    "head.walking.towards.2",
  ],
  "head.walking.towardsLeft": [
    "head.walking.towardsLeft.1",
    "head.walking.towardsLeft.2",
    "head.walking.towardsLeft.3",
    "head.walking.towardsLeft.2",
  ],
  "head.walking.towardsRight": [
    "head.walking.towardsRight.1",
    "head.walking.towardsRight.2",
    "head.walking.towardsRight.3",
    "head.walking.towardsRight.2",
  ],
  "heels.fadeOut": [
    "bubbles.heels.1",
    "bubbles.heels.2",
    "bubbles.heels.4",
    "bubbles.heels.3",
    "bubbles.heels.4",
    "bubbles.heels.6",
    "bubbles.heels.5",
    "bubbles.heels.6",
    "bubbles.heels.5",
  ],
  "heels.idle.awayRight": [
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.looking1.awayRight",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.2",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
    "heels.blinking.awayRight",
  ],
  "heels.idle.right": [
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.looking1.right",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.walking.right.2",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
    "heels.blinking.right",
  ],
  "heels.idle.towards": [
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.looking1.towards",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.walking.towards.2",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
    "heels.blinking.towards",
  ],
  "heels.idle.towardsLeft": [
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.looking1.towardsLeft",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.2",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
    "heels.blinking.towardsLeft",
  ],
  "heels.idle.towardsRight": [
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.looking1.towardsRight",
    "heels.blinking.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.looking2.towardsRight",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.2",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
    "heels.blinking.towardsRight",
  ],
  "heels.mixedDirections": [
    "heels.walking.towardsRight.2",
    "heels.walking.towards.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.left.2",
    "heels.walking.awayLeft.2",
    "heels.walking.away.2",
    "heels.walking.awayRight.2",
    "heels.walking.right.2",
  ],
  "heels.screenDirections": [
    "heels.walking.towardsRight.2",
    "heels.walking.towardsLeft.2",
    "heels.walking.awayLeft.2",
    "heels.walking.awayRight.2",
  ],
  "heels.walking.away": [
    "heels.walking.away.1",
    "heels.walking.away.2",
    "heels.walking.away.3",
    "heels.walking.away.2",
  ],
  "heels.walking.awayLeft": [
    "heels.walking.awayLeft.1",
    "heels.walking.awayLeft.2",
    "heels.walking.awayLeft.3",
    "heels.walking.awayLeft.2",
  ],
  "heels.walking.awayRight": [
    "heels.walking.awayRight.1",
    "heels.walking.awayRight.2",
    "heels.walking.awayRight.3",
    "heels.walking.awayRight.2",
  ],
  "heels.walking.left": [
    "heels.walking.left.1",
    "heels.walking.left.2",
    "heels.walking.left.3",
    "heels.walking.left.2",
  ],
  "heels.walking.right": [
    "heels.walking.right.1",
    "heels.walking.right.2",
    "heels.walking.right.3",
    "heels.walking.right.2",
  ],
  "heels.walking.towards": [
    "heels.walking.towards.1",
    "heels.walking.towards.2",
    "heels.walking.towards.3",
    "heels.walking.towards.2",
  ],
  "heels.walking.towardsLeft": [
    "heels.walking.towardsLeft.1",
    "heels.walking.towardsLeft.2",
    "heels.walking.towardsLeft.3",
    "heels.walking.towardsLeft.2",
  ],
  "heels.walking.towardsRight": [
    "heels.walking.towardsRight.1",
    "heels.walking.towardsRight.2",
    "heels.walking.towardsRight.3",
    "heels.walking.towardsRight.2",
  ],
  "heels.worldDirections": [
    "heels.walking.towards.2",
    "heels.walking.left.2",
    "heels.walking.away.2",
    "heels.walking.right.2",
  ],
  "shine.head": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.headInSymbio": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.heels": [
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
  ],
  "shine.heelsInSymbio": [
    "blank",
    "blank",
    "blank",
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
    "blank",
    "blank",
    "blank",
  ],
}
`;

exports[`Toppy > frame names 1`] = `
[
  "blank",
  "bubbles.head.1",
  "bubbles.head.2",
  "bubbles.head.3",
  "bubbles.head.4",
  "bubbles.head.5",
  "bubbles.head.6",
  "bubbles.heels.1",
  "bubbles.heels.2",
  "bubbles.heels.3",
  "bubbles.heels.4",
  "bubbles.heels.5",
  "bubbles.heels.6",
  "head.blinking.awayRight",
  "head.blinking.right",
  "head.blinking.towards",
  "head.blinking.towardsLeft",
  "head.blinking.towardsRight",
  "head.falling.away",
  "head.falling.awayLeft",
  "head.falling.awayRight",
  "head.falling.left",
  "head.falling.right",
  "head.falling.towards",
  "head.falling.towardsLeft",
  "head.falling.towardsRight",
  "head.looking1.right",
  "head.looking1.towards",
  "head.looking1.towardsRight",
  "head.looking2.right",
  "head.looking2.towards",
  "head.looking2.towardsRight",
  "head.walking.away.1",
  "head.walking.away.2",
  "head.walking.away.3",
  "head.walking.awayLeft.1",
  "head.walking.awayLeft.2",
  "head.walking.awayLeft.3",
  "head.walking.awayRight.1",
  "head.walking.awayRight.2",
  "head.walking.awayRight.3",
  "head.walking.left.1",
  "head.walking.left.2",
  "head.walking.left.3",
  "head.walking.right.1",
  "head.walking.right.2",
  "head.walking.right.3",
  "head.walking.towards.1",
  "head.walking.towards.2",
  "head.walking.towards.3",
  "head.walking.towardsLeft.1",
  "head.walking.towardsLeft.2",
  "head.walking.towardsLeft.3",
  "head.walking.towardsRight.1",
  "head.walking.towardsRight.2",
  "head.walking.towardsRight.3",
  "heels.blinking.awayRight",
  "heels.blinking.right",
  "heels.blinking.towards",
  "heels.blinking.towardsLeft",
  "heels.blinking.towardsRight",
  "heels.falling.away",
  "heels.falling.awayLeft",
  "heels.falling.awayRight",
  "heels.falling.left",
  "heels.falling.right",
  "heels.falling.towards",
  "heels.falling.towardsLeft",
  "heels.falling.towardsRight",
  "heels.looking1.awayRight",
  "heels.looking1.right",
  "heels.looking1.towards",
  "heels.looking1.towardsLeft",
  "heels.looking1.towardsRight",
  "heels.looking2.towardsRight",
  "heels.walking.away.1",
  "heels.walking.away.2",
  "heels.walking.away.3",
  "heels.walking.awayLeft.1",
  "heels.walking.awayLeft.2",
  "heels.walking.awayLeft.3",
  "heels.walking.awayRight.1",
  "heels.walking.awayRight.2",
  "heels.walking.awayRight.3",
  "heels.walking.left.1",
  "heels.walking.left.2",
  "heels.walking.left.3",
  "heels.walking.right.1",
  "heels.walking.right.2",
  "heels.walking.right.3",
  "heels.walking.towards.1",
  "heels.walking.towards.2",
  "heels.walking.towards.3",
  "heels.walking.towardsLeft.1",
  "heels.walking.towardsLeft.2",
  "heels.walking.towardsLeft.3",
  "heels.walking.towardsRight.1",
  "heels.walking.towardsRight.2",
  "heels.walking.towardsRight.3",
  "shadow.playable",
  "shadowMask.head.away",
  "shadowMask.head.awayLeft",
  "shadowMask.head.awayRight",
  "shadowMask.head.falling.away",
  "shadowMask.head.falling.awayRight",
  "shadowMask.head.falling.right",
  "shadowMask.head.falling.towardsRight",
  "shadowMask.head.right",
  "shadowMask.head.towardsRight",
  "shadowMask.heels.away",
  "shadowMask.heels.awayLeft",
  "shadowMask.heels.awayRight",
  "shadowMask.heels.right",
  "shadowMask.heels.towardsRight",
  "shine.head.1",
  "shine.head.2",
  "shine.head.3",
  "shine.head.4",
  "shine.head.5",
  "shine.head.6",
  "shine.heels.1",
  "shine.heels.2",
  "shine.heels.3",
  "shine.heels.4",
  "shine.heels.5",
  "shine.heels.6",
]
`;
